--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -46,6 +46,8 @@ items:
     href: expressroute-erdirect-about.md
   - name: Om ExpressRoute Global Reach
     href: expressroute-global-reach.md
+  - name: ExpressRoute Global Reach-scenario
+    href: expressroute-global-reach-app-scenario.md
   - name: Interoperabilitet för serverdelsanslutning
     items:
     - name: Prefix och testinstallation
@@ -219,15 +221,15 @@ items:
       href: https://go.microsoft.com/fwlink/p/?LinkId=615124
     - name: Så här konfigurerar du privat peering för din krets
       href: https://azure.microsoft.com/documentation/videos/azure-expressroute-how-to-set-up-azure-private-peering-for-your-expressroute-circuit/
-    - name: 'Hybridpartners: Aktivera scenarier lokalt'
+    - name: 'Hybridpartner: Aktivera scenarier lokalt'
       href: https://go.microsoft.com/fwlink/p/?LinkId=615125
     - name: Konfigurera Microsoft-peering för din krets
       href: https://azure.microsoft.com/documentation/videos/azure-expressroute-how-to-set-up-microsoft-peering-for-your-expressroute-circuit/
     - name: Konfigurera offentlig peering för din krets
       href: https://azure.microsoft.com/documentation/videos/azure-expressroute-how-to-set-up-azure-public-peering-for-your-expressroute-circuit/
-ms.openlocfilehash: 9980b405670b3fee0d1aa47c746e8f33001ba335
-ms.sourcegitcommit: 9fb6f44dbdaf9002ac4f411781bf1bd25c191e26
+ms.openlocfilehash: 54100c59be82666914ea35684fbae5130a763ada
+ms.sourcegitcommit: dede0c5cbb2bd975349b6286c48456cfd270d6e9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/08/2018
-ms.locfileid: "53083996"
+ms.lasthandoff: 01/16/2019
+ms.locfileid: "54329124"
