--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -662,6 +662,8 @@ items:
         href: log-query/query-language.md
       - name: Språkskillnader
         href: log-query/data-explorer-difference.md
+      - name: Övergång från loggsökning
+        href: log-query/log-search-transition.md
       - name: Kom igång
         items:
         - name: Kom igång med Analytics-portalen
@@ -702,6 +704,8 @@ items:
         items:
         - name: Exempel
           href: log-query/examples.md
+        - name: Skriva effektiva frågor
+          href: log-query/log-query-performance.md
         - name: Smart analysfunktion
           href: log-query/smart-analytics.md
         - name: Sökningar mellan resurser
@@ -1017,9 +1021,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: a0dc6965328ed73059342f36d89d5fdd405bfc9d
-ms.sourcegitcommit: a1cf88246e230c1888b197fdb4514aec6f1a8de2
+ms.openlocfilehash: 5cb859501356213289c674e3bfa689095c9b28e1
+ms.sourcegitcommit: 9f07ad84b0ff397746c63a085b757394928f6fc0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/16/2019
-ms.locfileid: "54352622"
+ms.lasthandoff: 01/17/2019
+ms.locfileid: "54390711"
